feat(misc): some cleanups and test